--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <main class="main-image">
         <h1> Hello <span> world </span> , forest! </h1>
-        <p1> Not everithing in life is code! </p1>
+        <p1> Not everything in life is code! </p1>
         <br>
         <button> Take a break </button>
     </main>
